--- a/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
@@ -7,14 +7,24 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="422.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.TicketsController">
+<AnchorPane prefHeight="599.0" prefWidth="1013.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.TicketsController">
    <children>
-      <Label layoutX="252.0" layoutY="380.0" text="Reservar vuelo">
+      <ImageView fitHeight="657.0" fitWidth="1032.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Imagenes/avionEnPista.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="458.0" layoutY="472.0" text="Reservar vuelo">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <StackPane fx:id="carrousel" layoutY="58.0" prefHeight="305.0" prefWidth="576.0">
+      <ImageView fitHeight="39.0" fitWidth="44.0" layoutX="14.0" layoutY="14.0">
+         <image>
+            <Image url="@../../../Imagenes/usuario.png" />
+         </image>
+      </ImageView>
+      <StackPane fx:id="carrousel" layoutX="205.0" layoutY="53.0" prefHeight="305.0" prefWidth="576.0" style="-fx-border-color: grey;">
          <children>
             <ImageView fx:id="imageView2" fitHeight="305.0" fitWidth="613.0">
                <image>
@@ -37,10 +47,5 @@
                </font>
             </Label>
          </children></StackPane>
-      <ImageView fitHeight="39.0" fitWidth="44.0" layoutX="14.0" layoutY="8.0">
-         <image>
-            <Image url="@../../../Imagenes/usuario.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
