--- a/src/main/resources/com/example/aerolineascanary7islands/perfil-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/perfil-view.fxml
@@ -20,7 +20,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <VBox alignment="CENTER" layoutX="200.0" layoutY="72.0" prefHeight="196.0" prefWidth="100.0" spacing="15.0">
+      <VBox alignment="CENTER" layoutX="163.0" layoutY="74.0" prefHeight="196.0" prefWidth="100.0" spacing="15.0">
          <children>
             <Label text="Nombre:">
                <font>
@@ -44,7 +44,7 @@
             </Label>
          </children>
       </VBox>
-      <VBox alignment="CENTER" layoutX="293.0" layoutY="72.0" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
+      <VBox alignment="CENTER" layoutX="270.0" layoutY="72.0" prefHeight="200.0" prefWidth="174.0" spacing="15.0">
          <children>
             <Label fx:id="labelNombre" prefHeight="26.0" prefWidth="66.0" text="Nombre">
                <font>
@@ -61,7 +61,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="labelTelefono" prefHeight="26.0" prefWidth="66.0" text="Nombre">
+            <Label fx:id="labelTelefono" prefHeight="27.0" prefWidth="150.0" text="Nombre">
                <font>
                   <Font size="18.0" />
                </font>
@@ -73,15 +73,15 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Pane fx:id="pane2" layoutX="130.0" layoutY="268.0" prefHeight="116.0" prefWidth="339.0" visible="false">
+      <Pane fx:id="pane2" layoutX="121.0" layoutY="272.0" prefHeight="116.0" prefWidth="358.0">
          <children>
             <ComboBox fx:id="comboBoxFields" layoutX="95.0" layoutY="2.0" prefWidth="150.0" />
-            <Label fx:id="labelNew" layoutX="46.0" layoutY="39.0" text="Nuevo dato:">
+            <Label fx:id="labelNew" layoutX="14.0" layoutY="39.0" prefHeight="27.0" prefWidth="174.0" text="Nuevo dato:">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="textFieldUpdate" layoutX="171.0" layoutY="40.0" />
+            <TextField fx:id="textFieldUpdate" layoutX="192.0" layoutY="40.0" />
             <Label layoutX="123.0" layoutY="75.0" onMouseClicked="#confirmar" prefHeight="27.0" prefWidth="94.0" text="Confirmar">
                <font>
                   <Font size="18.0" />
