--- a/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
@@ -136,12 +136,12 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="538.0" layoutY="41.0" text="Fecha de ida">
+            <Label layoutX="559.0" layoutY="41.0" text="Desde">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="698.0" layoutY="41.0" text="Fecha de vuelta">
+            <Label layoutX="734.0" layoutY="41.0" text="Hasta">
                <font>
                   <Font size="15.0" />
                </font>
